generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["postgresqlExtensions"]
}

datasource db {
  provider   = "postgresql"
  url        = env("DATABASE_URL")
  extensions = [vector]
}

// ============================================================
// USER
// ============================================================

model User {
  id           String    @id @default(uuid())
  email        String    @unique
  name         String?
  passwordHash String    @map("password_hash")
  isSuperAdmin Boolean   @default(false) @map("is_super_admin")
  suspended    Boolean   @default(false)
  suspendedAt  DateTime? @map("suspended_at")
  suspendedReason String? @map("suspended_reason") @db.VarChar(500)
  createdAt    DateTime  @default(now()) @map("created_at")
  updatedAt    DateTime  @updatedAt @map("updated_at")

  documents        Document[]
  folders          Folder[]
  chatSessions     ChatSession[]
  analyticsEvents  AnalyticsEvent[]
  promptTemplates  PromptTemplate[]  @relation("PromptCreator")
  promptVersions   PromptVersion[]   @relation("VersionCreator")

  @@map("users")
}

// ============================================================
// DOCUMENTS & CHUNKS
// ============================================================

model Folder {
  id        String   @id @default(uuid())
  name      String   @db.VarChar(200)
  userId    String   @map("user_id")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  user      User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  documents Document[]

  @@unique([name, userId])
  @@index([userId])
  @@map("folders")
}

model Document {
  id        String   @id @default(uuid())
  userId    String   @map("user_id")
  title     String   @db.VarChar(500)
  fileType  String   @map("file_type") @db.VarChar(50)
  fileUrl   String?  @map("file_url")
  status    String   @default("processing") @db.VarChar(50)
  chunkCount Int     @default(0) @map("chunk_count")
  description String? @db.VarChar(500)
  folderId  String?  @map("folder_id")
  errorMessage String? @map("error_message") @db.Text
  processingMetrics Json? @map("processing_metrics")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  user      User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  folder    Folder?          @relation(fields: [folderId], references: [id], onDelete: SetNull)
  chunks    DocumentChunk[]

  @@index([userId], map: "documents_user_id_idx")
  @@index([folderId], map: "documents_folder_id_idx")
  @@map("documents")
}

model DocumentChunk {
  id           String   @id @default(uuid())
  documentId   String   @map("document_id")
  content      String
  embedding    Unsupported("vector(1536)")?
  chunkIndex   Int      @map("chunk_index")
  metadata     Json?
  createdAt    DateTime @default(now()) @map("created_at")
  chunkType    String?  @default("text") @map("chunk_type") @db.VarChar(50)
  ocrText      String?  @map("ocr_text")
  caption      String?
  imageSummary String?  @map("image_summary")
  imageUrl     String?  @map("image_url")

  document  Document @relation(fields: [documentId], references: [id], onDelete: Cascade)

  @@index([documentId], map: "document_chunks_document_id_idx")
  @@index([chunkType], map: "document_chunks_chunk_type_idx")
  @@map("document_chunks")
}

// ============================================================
// CHAT
// ============================================================

model ChatSession {
  id        String    @id @default(uuid())
  userId    String?   @map("user_id")
  title     String?   @db.VarChar(500)
  createdAt DateTime  @default(now()) @map("created_at")

  user      User?         @relation(fields: [userId], references: [id], onDelete: SetNull)
  messages  ChatMessage[]

  @@index([userId])
  @@map("chat_sessions")
}

model ChatMessage {
  id        String   @id @default(uuid())
  sessionId String   @map("session_id")
  role      String   @db.VarChar(20)
  content   String
  sources   Json?
  createdAt DateTime @default(now()) @map("created_at")

  session ChatSession @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  @@map("chat_messages")
}

// ============================================================
// SETTINGS
// ============================================================

model Setting {
  id        String   @id @default(uuid())
  key       String   @unique @db.VarChar(100)
  value     String
  updatedAt DateTime @updatedAt @map("updated_at")

  @@map("settings")
}

// ============================================================
// ANALYTICS
// ============================================================

model AnalyticsEvent {
  id        String   @id @default(uuid())
  userId    String?  @map("user_id")
  eventType String   @map("event_type") @db.VarChar(50)
  metadata  Json?
  createdAt DateTime @default(now()) @map("created_at")

  user User? @relation(fields: [userId], references: [id])

  @@index([eventType, createdAt])
  @@index([createdAt])
  @@map("analytics_events")
}

// ============================================================
// PROMPTS
// ============================================================

model PromptTemplate {
  id        String   @id @default(uuid())
  name      String   @db.VarChar(200)
  content   String
  category  String   @default("general") @db.VarChar(50)
  isActive  Boolean  @default(false) @map("is_active")
  version   Int      @default(1)
  createdBy String?  @map("created_by")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  creator  User?           @relation("PromptCreator", fields: [createdBy], references: [id])
  versions PromptVersion[]

  @@map("prompt_templates")
}

model PromptVersion {
  id         String   @id @default(uuid())
  promptId   String   @map("prompt_id")
  version    Int
  content    String
  changeNote String?  @map("change_note")
  createdBy  String?  @map("created_by")
  createdAt  DateTime @default(now()) @map("created_at")

  prompt  PromptTemplate @relation(fields: [promptId], references: [id], onDelete: Cascade)
  creator User?          @relation("VersionCreator", fields: [createdBy], references: [id])

  @@unique([promptId, version])
  @@map("prompt_versions")
}

// ============================================================
// WHATSAPP (placeholder — integration method TBD)
// ============================================================

model WhatsAppConfig {
  id                 String   @id @default(uuid())
  phoneNumberId      String   @map("phone_number_id") @db.VarChar(50)
  accessToken        String   @map("access_token") @db.Text
  verifyToken        String   @map("verify_token") @db.VarChar(200)
  appSecret          String?  @map("app_secret") @db.Text
  businessAccountId  String?  @map("business_account_id") @db.VarChar(50)
  phoneNumber        String?  @map("phone_number") @db.VarChar(30)
  displayName        String?  @map("display_name") @db.VarChar(200)
  isEnabled          Boolean  @default(true) @map("is_enabled")
  welcomeMessage     String?  @map("welcome_message") @db.Text
  offlineMessage     String?  @map("offline_message") @db.Text
  autoReply          Boolean  @default(true) @map("auto_reply")
  createdAt          DateTime @default(now()) @map("created_at")
  updatedAt          DateTime @updatedAt @map("updated_at")

  conversations  WhatsAppConversation[]
}

model WhatsAppConversation {
  id              String   @id @default(uuid())
  configId        String   @map("config_id")
  waId            String   @map("wa_id") @db.VarChar(30)
  contactName     String?  @map("contact_name") @db.VarChar(200)
  leadName        String?  @map("lead_name") @db.VarChar(200)
  leadEmail       String?  @map("lead_email") @db.VarChar(300)
  leadWhatsApp    String?  @map("lead_whatsapp") @db.VarChar(30)
  leadData        Json?    @map("lead_data")
  leadScore       String?  @default("low") @map("lead_score") @db.VarChar(20)
  leadStatus      String?  @default("new") @map("lead_status") @db.VarChar(20)
  leadIntent      String?  @map("lead_intent") @db.VarChar(30)
  messageCount    Int      @default(0) @map("message_count")
  lastMessageAt   DateTime? @map("last_message_at")
  lastMessagePreview String? @map("last_message_preview") @db.VarChar(200)
  createdAt       DateTime @default(now()) @map("created_at")
  updatedAt       DateTime @updatedAt @map("updated_at")

  config   WhatsAppConfig    @relation(fields: [configId], references: [id], onDelete: Cascade)
  messages WhatsAppMessage[]

  @@unique([waId])
  @@index([lastMessageAt])
  @@map("whatsapp_conversations")
}

model WhatsAppMessage {
  id              String   @id @default(uuid())
  conversationId  String   @map("conversation_id")
  role            String   @db.VarChar(20)
  content         String   @db.Text
  messageType     String   @default("text") @map("message_type") @db.VarChar(20)
  mediaUrl        String?  @map("media_url") @db.Text
  mediaId         String?  @map("media_id") @db.VarChar(100)
  mimeType        String?  @map("mime_type") @db.VarChar(100)
  metaMessageId   String?  @map("meta_message_id") @db.VarChar(100)
  deliveryStatus  String?  @default("sent") @map("delivery_status") @db.VarChar(20)
  sources         Json?
  createdAt       DateTime @default(now()) @map("created_at")

  conversation WhatsAppConversation @relation(fields: [conversationId], references: [id], onDelete: Cascade)

  @@index([conversationId, createdAt])
  @@index([metaMessageId])
  @@map("whatsapp_messages")
}
